k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: learnhub-app
  namespace: learnhub
  labels:
    app: learnhub
spec:
  replicas: 2
  selector:
    matchLabels:
      app: learnhub
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  template:
    metadata:
      labels:
        app: learnhub
    spec:
      containers:
        - name: learnhub
          image: DOCKER_USERNAME/learnhub:latest
          ports:
            - containerPort: 3000
              protocol: TCP
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "500m"
              memory: "512Mi"
          livenessProbe:
            httpGet:
              path: /
              port: 3000
            initialDelaySeconds: 15
            periodSeconds: 20
            timeoutSeconds: 5
          readinessProbe:
            httpGet:
              path: /
              port: 3000
            initialDelaySeconds: 5
            periodSeconds: 10
            timeoutSeconds: 5
      restartPolicy: Always
