k8s/gateway-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gateway-service
  namespace: learnhub
  labels:
    app: gateway
spec:
  type: NodePort
  selector:
    app: gateway
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
      nodePort: 30007
